--- a/page-wine.html
+++ b/page-wine.html
@@ -44,3 +44,153 @@
     <!-- //google fonts -->
 
 </head>
+
+
+
+
+
+<!--footer -->
+    <footer>
+        <section class="footer footer_w3layouts_section_1its py-5">
+            <div class="container py-lg-4 py-3">
+                <div class="row footer-top">
+                    <div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
+                        <div class="footer-title">
+                            <h3>Адрес</h3>
+                        </div>
+                        <div class="footer-text">
+                            <p>Расположение: 69000, Запорожье, Украина</p>
+                            <p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
+                            <p>Электронная почта: <a href="mailto:dovgalyv@ukr.net">dovgalyv@ukr.net</a></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
+                        <div class="footer-title">
+                            <h3>О нас</h3>
+                        </div>
+                        <div class="footer-text">
+                            <p>Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации...
+                                Самые неожиданные места Украины и Европы.</p>
+                            <p>Путешествуйте с улыбкой. С любовью Новый поворот!</p>
+                        </div>
+                        <ul class="social_section_1info">
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
+                                        class="fa fa-facebook"></span></a></li>
+                            <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
+                                        class="fa fa-vk"></span></a></li>
+                            <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
+                                        class="fa fa-instagram"></span></a></li>
+                            <li class="mb-2 twitter"><a href="https://twitter.com/novipovorot"><span
+                                        class="fa fa-twitter"></span></a></li>
+                            <li class="viber">
+                                <a
+                                    href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp">
+                                    <svg id="Bold" fill="white" enable-background="new 0 0 24 24" height="13"
+                                        viewBox="0 0 24 24" width="13" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m23.155 13.893c.716-6.027-.344-9.832-2.256-11.553l.001-.001c-3.086-2.939-13.508-3.374-17.2.132-1.658 1.715-2.242 4.232-2.306 7.348-.064 3.117-.14 8.956 5.301 10.54h.005l-.005 2.419s-.037.98.589 1.177c.716.232 1.04-.223 3.267-2.883 3.724.323 6.584-.417 6.909-.525.752-.252 5.007-.815 5.695-6.654zm-12.237 5.477s-2.357 2.939-3.09 3.702c-.24.248-.503.225-.499-.267 0-.323.018-4.016.018-4.016-4.613-1.322-4.341-6.294-4.291-8.895.05-2.602.526-4.733 1.93-6.168 3.239-3.037 12.376-2.358 14.704-.17 2.846 2.523 1.833 9.651 1.839 9.894-.585 4.874-4.033 5.183-4.667 5.394-.271.09-2.786.737-5.944.526z" />
+                                        <path
+                                            d="m12.222 4.297c-.385 0-.385.6 0 .605 2.987.023 5.447 2.105 5.474 5.924 0 .403.59.398.585-.005h-.001c-.032-4.115-2.718-6.501-6.058-6.524z" />
+                                        <path
+                                            d="m16.151 10.193c-.009.398.58.417.585.014.049-2.269-1.35-4.138-3.979-4.335-.385-.028-.425.577-.041.605 2.28.173 3.481 1.729 3.435 3.716z" />
+                                        <path
+                                            d="m15.521 12.774c-.494-.286-.997-.108-1.205.173l-.435.563c-.221.286-.634.248-.634.248-3.014-.797-3.82-3.951-3.82-3.951s-.037-.427.239-.656l.544-.45c.272-.216.444-.736.167-1.247-.74-1.337-1.237-1.798-1.49-2.152-.266-.333-.666-.408-1.082-.183h-.009c-.865.506-1.812 1.453-1.509 2.428.517 1.028 1.467 4.305 4.495 6.781 1.423 1.171 3.675 2.371 4.631 2.648l.009.014c.942.314 1.858-.67 2.347-1.561v-.007c.217-.431.145-.839-.172-1.106-.562-.548-1.41-1.153-2.076-1.542z" />
+                                        <path
+                                            d="m13.169 8.104c.961.056 1.427.558 1.477 1.589.018.403.603.375.585-.028-.064-1.346-.766-2.096-2.03-2.166-.385-.023-.421.582-.032.605z" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="telegram"><a href="https://t.me/novipovorot"><span
+                                        class="fa fa-paper-plane"></span></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
+                        <div class="footer-title">
+                            <h3>Места для путешествий</h3>
+                        </div>
+                        <div class="row">
+                            <ul class="col-6 links">
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
+                                </li>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                </li>
+                            </ul>
+                            <ul class="col-6 links">
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
+                                        class="scroll">Лимонарий</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!--
+                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
+                        <div class="footer-title">
+                            <h3>Новостная рассылка</h3>
+                        </div>
+                        <div class="footer-text">
+                            <p>
+                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
+                                обновления.
+                            </p>
+                            <form action="#" method="post">
+                                <input type="email" name="Email" placeholder=" Введите адрес электронной почты... "
+                                    required="">
+                                <button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                                <div class="clearfix"> </div>
+                            </form>
+                        </div>
+                    </div>-->
+                    <!-- Begin Mailchimp Signup Form -->
+                     <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
+                        <div class="footer-title">
+                            <h3>Новостная рассылка</h3>
+                        </div>
+                        <div class="footer-text">
+                            <p>
+                                Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и
+                                обновления.
+                            </p>
+
+                            <form action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
+                                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Введите адрес электронной почты..." required>
+                                   <!-- <input type="text" name="b_325c75dce90af10f77da58955_2af7a2a416" tabindex="-1" value="">-->
+
+                                        <button class="btn1" id="mc-embedded-subscribe"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                                        <div class="clearfix"> </div>
+                                </div>	
+                            </form>
+                        </div>
+
+                    </div>
+                    <!--End mc_embed_signup-->
+                </div>
+            </div>
+        </section>
+    </footer>
+    <!-- //footer -->
+
+    <!-- copyright -->
+    <div class="copyright py-3 text-center">
+        <p>© 2021 Новый поворот</p>
+    </div>
+    <!-- //copyright -->
+
+    <!-- move top -->
+    <div class="move-top text-right">
+        <a href="#home" class="move-top">
+            <span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
+        </a>
+    </div>
+    <!-- move top -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    
+</body>
+
+</html>
