--- a/page-wine.html
+++ b/page-wine.html
@@ -101,9 +101,10 @@
                            Экскурсия на винный завод, дегустация вина и улиток
                         </h4>
                         <p class="txt-alg-jf">
-                            Оригинальный подарок своими руками к 8 марта!
-                            Вкусный мастер класс по созданию Сладкого букета из маршмеллоу!
-                            Научитесь делать оригинальный и красивый подарок к любому празднику!
+                            10 видов вин плюс улитки 360 грн.
+                             5 видов вин плюс улитки 300 грн.
+Предоплата 100грн. 
+Время 11 и 16, при брони учняйте дату, время и наполнение эскурсии!
                         </p>
                         <hr>
                         <!-- Alert warning -->
