--- a/page-wine.html
+++ b/page-wine.html
@@ -116,8 +116,8 @@
                              
                             </span>
                         </div>
-                        <!-- Alert warning -->
-                        <div class="alert alert-warning mt-3 ">
+                        <!-- Alert info -->
+                        <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
                             <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
