--- a/index.html
+++ b/index.html
@@ -432,27 +432,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     </div>
                 </div>
                 <!--  //LOL -->
-
-                <!--  Одесса  -->
-              <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                            <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
-                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-                        <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 Марта 2021 Года</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
-                        </ul>
-                    </div>
-                </div>-->
-                <!--  //Одесса  -->
-
+                
                 <!--  Лимонарий  -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
@@ -470,7 +450,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 21, 27 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
