--- a/packages.html
+++ b/packages.html
@@ -276,7 +276,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>28 Марта, 16 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>16 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
