--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Апреля 2021 Года </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
