--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -5,7 +5,7 @@
     <title>Грузия | Новый поворот | Походы по Грузии</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Грузии, расписание походов, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Расписание походов, Грузия Новый Поворот Грузия, Походы по Грузии, Тушетия и Хевсуретия, Сванетия и Колхида ">
     
     <!-- Open Graph data-->
     <meta property="og:title" content="Походы по Грузии">
