--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот', Стамбул - столица тюльпанов. Путешествуйте с улыбкой! Экскурсии Запорожье | Экскурсии выходного дня">
-    <meta name="keywords"
-        content="Tуры выходного дня 'Новый поворот', Стамбул - столица тюльпанов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+        content="Туры выходного дня 'Новый поворот', Прогулка по Золотому Рогу, Оазис тишины, Между Европой и Азией, Центр Стамбула, Улица антикварных лавок ">
+    <!--<meta name="keywords"
+        content="Tуры выходного дня 'Новый поворот', Стамбул - столица тюльпанов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />-->
     <!-- Open Graph data-->
     <meta property="og:title" content="Стамбул - столица тюльпанов!">
     <meta property="og:description"
