--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -1,4 +1,117 @@
 <!--cheese-farm.html-->
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+<title>Сырная ферма и Пасека | Новый поворот</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Сырная ферма и Пасека ">
+   
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Сырная ферма и Пасека">
+    <meta property="og:description" content="Сырная ферма и Пасека"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-cheese-farm.html"/>
+    <meta property="og:image" content="images/cheese-farm-max.jpg">
+    <!--End Open Graph data-->
+
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+
+    <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+    <!--//favicon.ico-->
+    <!-- css files -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />--><!-- bootstrap css -->
+    <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <!-- //css files -->
+
+    <!-- google fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
+    <link
+        href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+    <!-- //google fonts -->
+
+        <!-- Facebook Pixel Code -->
+       <!-- <script>
+          !function(f,b,e,v,n,t,s)
+          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+          n.queue=[];t=b.createElement(e);t.async=!0;
+          t.src=v;s=b.getElementsByTagName(e)[0];
+          s.parentNode.insertBefore(t,s)}(window, document,'script',
+          'https://connect.facebook.net/en_US/fbevents.js');
+          fbq('init', '3921253151274858');
+          fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
+        /></noscript>-->
+        <!-- End Facebook Pixel Code -->
+</head>
+  <body>
+
+<!-- header -->
+    <header>
+        <div class="container">
+            <!-- nav -->
+            <nav class="py-md-4 py-3 d-lg-flex">
+                <div id="logo">
+                    <h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот
+                        </a></h1>
+                </div>
+                <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
+                <input type="checkbox" id="drop" />
+                <ul class="menu ml-auto mt-1">
+                    <li class=""><a href="index.html">Главная</a></li>
+                    <li class=""><a href="about.html">Отзывы </a></li>
+                    <li class=""><a href="packages.html">Туры</a></li>
+                    <li class=""><a href="contact.html">Контакты</a></li>
+                    <li class="booking"><a href="booking.html">Забронировать</a></li>
+                </ul>
+            </nav>
+            <!-- //nav -->
+        </div>
+    </header>
+    <!-- //header -->
+
+    <!-- banner -->
+    <section class="banner_inner" id="home">
+        <div class="banner_inner_overlay">
+        </div>
+    </section>
+    <!-- //banner -->
+
+
+<!--single page-->
+    <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
+        <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
+            <div class="row df-cntr">
+            <!-- Хлебные крошки -->
+               <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item active" aria-current="page">Экскурсия</li>
+                   </ol>
+                </nav>
+               </div>
+              <!-- //Хлебные крошки -->
+              
 18 апреля 2021 САМАЯ ВКУСНАЯ ЭКСКУРСИЯ! 
 СЫРНАЯ ФЕРМА И ПАСЕКА!
 ДЕГУСТАЦИЯ 7 ВИДОВ СЫРА, МЕДА, МОЛОКА И ЙОГУРТА! 
