--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -331,6 +331,69 @@
 <br> -->
 <!-- //Карусель -->
 
+<!--gallery-->
+<main class="main">
+    <div class="container">
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #1" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-1.jpg ">
+            <img src="/images/Cheese-Farm/cheese-farm-1.jpg"></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #2" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-2.jpg">
+            <img src="/images/GCheese-Farm/cheese-farm-2.jpg"></a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #3" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-3.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-3.jpg"></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #4" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-4.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-4.jpg"></a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #5" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-5.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-5.jpg"></a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #5" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-6.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-6.jpg"></a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #5" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-7.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-7.jpg"></a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #5" data-fancybox="gallery"
+            href="/images/Cheese-Farm/cheese-farm-8.jpg">
+            <img src="/images/Cheese-Farm/cheese-farm-8.jpg"></a>
+        </div>
+      </div>
+
+    </div>
+  </main>
+
+
+
+
+
+
+
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
