--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -121,7 +121,7 @@
                     <h3 class="title">Яворовская Ниагара</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/cheese-farm-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Yavorovskaya-niagara-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
