--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -111,13 +111,13 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Прогулка на Днепре</li>
+                            <li class="breadcrumb-item active" aria-current="page">Запорожье на Днепре</li>
                         </ol>
                     </nav>
                 </div>
                 <!-- //Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Прогулка на Днепре</h3>
+                    <h3 id="ZaporizhzhiOnTheDnieper" class="title">Запорожье на Днепре</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/walk-on-Dnieper-max.jpg" alt="news image" class="img-fluid">
@@ -131,7 +131,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            <span id="ExcursionToZaporozhye">Экскурсия в Запорожье</span><span id="ZaporizhzhiaOnTheDnieper"> на Днепре</span>, <span id="WalkWithTwist">прогулка с изюминкой</span>...
+                            <span id="ExcursionToZaporozhye">Экскурсия в Запорожье  на Днепре</span>, <span id="WalkWithTwist">прогулка с изюминкой</span>...
                         </h4>
                         <p class="txt-alg-jf">
                             Что ты знаешь о <span id="Zaporozhye">Запорожье</span>? Спорим что наша экскурсия тебя удивит ?
