--- a/page-Zaporizhzhi-on-Dnieper.html
+++ b/page-Zaporizhzhi-on-Dnieper.html
@@ -117,7 +117,7 @@
                 </div>
                 <!-- //Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 id="ZaporizhzhiOnTheDnieper" class="title">Запорожье на Днепре</h3>
+                    <h3 id="ZaporizhzhiaOnTheDnieper" class="title">Запорожье на Днепре</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/walk-on-Dnieper-max.jpg" alt="news image" class="img-fluid">
