--- a/packages.html
+++ b/packages.html
@@ -1231,7 +1231,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
                         </h5>
-                        <p>Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <p>Зоопарк - Замок - Oзеро</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -1255,7 +1255,7 @@
                             <a href="https://novipovorot.pp.ua/page-Svyatogorsk-and-Soledar.html">Святогорск И
                                 Соледар</a>
                         </h5>
-                        <p>Там очень Круто и необычно!</p>
+                        <p>Круто и необычно</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
