--- a/packages.html
+++ b/packages.html
@@ -227,7 +227,7 @@
                             </a>
                         </h5>
                         <p>
-                           Сырная ферма с дегустацией
+                           Дегустация сыра
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 13 февраля </span></li>
@@ -247,7 +247,7 @@
                         <p><span class="fa fa-tags"></span> <span> 2995грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Каменец-П., Умань, Меджибош</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Каменец Подольский</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
                                Каменец Подольский и Умань
@@ -281,7 +281,7 @@
                             </a>
                         </h5>
                         <p>
-                            Теплое июльское море, красивейшие виды современного Батуми. 
+                            Красивейшие виды современного Батуми
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 2-9 Июля 2022 </span></li>
