--- a/packages.html
+++ b/packages.html
@@ -376,7 +376,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Hortica.html">
-                                Хортица
+                               Экскурсия на Хортицу
                             </a>
                         </h5>
                         <p>Тайны и загадки родного острова </p>
