--- a/packages.html
+++ b/packages.html
@@ -311,7 +311,7 @@
                             Покоряя эти вершины, ощущаешь дух Карпат
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Декабрь 2021 - Март 2022 </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Декабрь - Март 2022 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>5-7 Дней</span></li>
                         </ul>
                     </div>
