--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Туры выходного дня из Запорожья - "Новый Поворот"</title>
+    <meta name="title" content="Туры выходного дня из Запорожья - "Новый Поворот"">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 
