--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 
 <head>
-    <title>Туры, Стр.3 | Путешествия | Новый поворот </title>
+    <meta http-equiv="refresh" content="1;URL=https://novipovorot.pp.ua/packages.html" />
+    <title>Экскурсии | Путешествия | Дегустации | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords"
