--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -137,7 +137,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 18 декабря и 2 Января</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 20 февраля</span>
                                 </li>
                             </ul>
                         </div>
